--- a/docs/css/breakout.css
+++ b/docs/css/breakout.css
@@ -2,16 +2,24 @@
 
 background {
     z-index: -1;
-    background-image: url('../assets/img/breakout/background.jpg');
-    background-position: bottom center;
+    background-image: url('../assets/img/breakout/border.png');
+    background-color: lavender;
     background-size: cover;
-    width: 100vw;
-    height: 100vh;
+    background-position: bottom center;
+    width: 100%;
+    height: 100%;
 }
 
-player {
-    background-image: url('../assets/img/breakout/player.jpg');
-    background-repeat: no-repeat;
-    width: 100px;
-    height: 100px;
+paddle {
+    background-image: url('../assets/img/breakout/paddle.jpg');
+    width: 963px;
+    height: 128px;
+    cursor: pointer;
+}
+
+ball {
+    background-image: url('../assets/img/breakout/ball.png');
+    width: 128px;
+    height: 128px;
+    cursor: pointer;
 }
