--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -83,3 +83,53 @@ background, player, ui {
 
 
 /* Button */
+
+.btn, 
+a .btn,
+input[type="submit"] {
+    background: var(--primary-color);
+    color: var(--onprimary-color);
+
+    display: inline-block;
+    
+    padding: 10px 30px;
+    border: none;
+    border-radius: 5px;
+    box-shadow: 0 3px 10px rgba(0, 0, 0, 0.2);
+
+    text-decoration: none;
+    font-size: 1em;
+
+    cursor: pointer;
+}
+
+.btn:hover, 
+.btn:active {
+    background: var(--primary-color-light);
+
+    box-shadow: 0 3px 13px rgba(0, 0, 0, 0.2);
+}
+
+.btn.secondary {
+    background: var(--secondary-color);
+    color: var(--onprimary-color);
+}
+
+.btn.secondary:hover, 
+.btn.secondary:active {
+    background: var(--secondary-color-light);
+
+    box-shadow: 0 3px 13px rgba(0, 0, 0, 0.2);
+}
+
+.btn.tertiary {
+    background: var(--tertiary-color);
+    color: var(--onprimary-color);
+}
+
+.btn.tertiary:hover, 
+.btn.tertiary:active {
+    background: var(--tertiary-color-light);
+
+    box-shadow: 0 3px 13px rgba(0, 0, 0, 0.2);
+}
