--- a/docs/css/breakout.css
+++ b/docs/css/breakout.css
@@ -11,7 +11,7 @@ background {
 }
 
 paddle {
-    background-image: url('../assets/img/breakout/paddle.jpg');
+    background-image: url('../assets/img/breakout/paddle.png');
     width: 963px;
     height: 128px;
     cursor: pointer;
