--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -79,33 +79,43 @@ body {
 }
 
 header, footer {
-    background-color: var(--primary-color);
+    background-color: #0099db;
     height: 10vh;
+    position: relative;
 }
 
 .fox {
     background-image: url(../assets/img/general/foxIdle1.png);
+    transform : scaleX(-1);
     background-repeat: no-repeat;
     width: 56px;
     height: 69px;
     margin: 40px;
-    padding: 20px;
+    padding: 10px;
     cursor: pointer;
     position: absolute;
     right: 0px;
     bottom: 0px;
 }
 
+.title {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+
+    height: 100%;
+}
+
 h1 {
-    text-align: center;
-    margin-top: 0px;
-    margin-bottom: 1px;
-    
+    color: white;
+    font-size: 2em;
 }
 
 .buttons {
-    border:hsl(198, 100%, 65%) solid 10px;
-    height: 77vh;
+    border-left:#2ce8f5 solid 200px;
+    border-right: #2ce8f5 solid 200px;
+    height: 80vh;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -120,12 +130,12 @@ input[type="submit"] {
     background: var(--primary-color);
     color: var(--onprimary-color);
 
-    margin: 10px;
-    padding: 10px 20px;
+    margin: 15px;
+    padding: 10px 10px;
     border: none;
     border-radius: 5px;
     box-shadow: 0 3px 10px rgba(0, 0, 0, 0.2);
-    width: 20vw;
+    width: 15vw;
     height: 5vh;
 
     text-align: center;
