--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -91,6 +91,9 @@ body {
     width: 56px;
     height: 69px;
     cursor: pointer;
+    position: fixed;
+    bottom: 10vh;
+    right: 1vh;
 }
 
 h1 {
@@ -121,6 +124,17 @@ h2 {
     align-items: center;
 
     margin: auto;
+}
+
+.return {
+    background-image: url(../assets/img/general/return.png);
+    width: 50px;
+    height: 50px;
+    background-repeat: no-repeat;
+    cursor: pointer;
+    position: absolute;
+    left: 5vh;
+    color: var(--black1);
 }
 
 
