Added levels, QOL, New input

--- a/docs/css/snake.css
+++ b/docs/css/snake.css
@@ -24,6 +24,9 @@ body {
 
 .gameComp {
     position: absolute;
+    -moz-user-select: none;
+    -webkit-user-select: none;
+    user-select: none;
 }
 
 .red {
