--- a/docs/css/snake.css
+++ b/docs/css/snake.css
@@ -41,6 +41,30 @@ body {
     z-index: -10;
 }
 
+.item-footer {
+    display: flex;
+    justify-content: center;
+}
+
+.item-footer h2 {
+    margin-top: 0;
+    font-size: 70px;
+}
+
+#progressBar {
+    position: absolute;
+    color: var(--white1);
+}
+
+#progressBG {
+    color: var(--white2)
+}
+
+#progress {
+    display: flex;
+    justify-content: flex-start;
+}
+
 #deathMenu {
     z-index: 100;
 }
